# PFAS-Automated-Quantitation

./: .Rbuildignore  .gitignore  .lintr  .pre-commit-config.yaml  DESCRIPTION  LICENSE  LICENSE.md  Makefile  Makevars  NAMESPACE  README.md  StyleCode.R  pyproject.toml  setup.R
.github/workflows/: render-rmarkdown.yaml  style.yaml
R/: Create_Analysis_Summary_File.R  GetSourceData.R  ProcessCalibrationCurveSourceFile.R  ProcessDataFiles.R  ProcessExtractionBatchSource.R  ProcessRawData.R  PutSourceData.R  globals.R  main.R  put_data.R
R/build-calibration-curve/: 1_CalculateAveragePeakRatio.R  1_CalculateConcentrationRatio.R  2_BuildCalibrationCurveInput.R  3_CalculateCalibrationCurve.R  Batch1Issues.Rmd  Batch3Issues.Rmd  BuildCalibrationCurveInput.R  CalculateAveragePeakRatio.R  CalculateCalibrationCurve.R  CalculateConcentrationRatio.R  EvaluateCalibrationCurve.Rmd
R/build-data-products/: 1_BuildExtractionBlank.R  2023-09-19-Check-QC-Results.Rmd  2023-12-06-Add-to-output-files.Rmd  2_QCSampleAnalysis.R  2_RemoveExtractionBlankFromAnalyteConcentration.R  3_1_BuildQualityControlTable.R  3_2_RemoveFieldBlanksFromBlankFilteredAnalyte.R  3_BuildQualityControlTable.R  3_BuildQualityControlTable_with_SampleType.R  4_EvaluateQualityControlSamples.R  5_Create_Analysis_Summary_File.R  (+14 more)
data/: .gitignore
docs/: .gitignore  DataModel.Rmd  EntityRelationshipDiagram.Rmd  LogicFlow.Rmd  LogicFlow.md  ProcessedData.Rmd  ProcessedData.md  Source Files.Rmd  UploadDataToS3.Rmd  UploadDataToS3.md  erd.R
inst/: WORDLIST
notebooks/: create-analysis-file.ipynb
tests/: testthat.R
(+43 files in other folders)
